# -Mapear-Estrutura-de-Projetos

./: .gitignore  .mapignore  ANALISE_PROJETO.md  CHANGELOG.md  CHANGES.md  CODING_STANDARDS.md  COMPREHENSIVE_CYBERSECURITY_GUIDE.md  CYBERSECURITY_SUITE_README.md  Dockerfile  Makefile  README.md  README2.md  README_CIBERSEG.md  README_backup.md  RELATORIO_MELHORIAS.md  SECURITY_MODULES_README.md  cybersec.config.yaml  cybersec_config.py  cybersec_logging.py  cybersec_toolkit.py  cybersecurity_module.py  cybersecurity_module.sh  cybersecurity_suite.py  cybersecurity_suite.sh  docker-compose.yml  docker_exposure_checker.py  docker_exposure_checker.sh  exemplo_uso_biblioteca.sh  fban2.py  fban2.sh  libmapear.sh  mapear_estrutura.sh  mapear_estrutura_ciberseg.sh  package.json  pyproject.toml  requirements.txt  run_cybersec_toolkit.sh  run_security_suite.sh  security_suite.py  security_suite.sh  (+3 more)
.github/workflows/: ci.yml
cybersec-toolkit/: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  __version__.py  requirements.txt  setup.py
cybersec-toolkit/.github/workflows/: ci.yml
cybersec-toolkit/config/: cybersec.yaml.example
cybersec-toolkit/cybersec/: __init__.py
cybersec-toolkit/cybersec/cli/: __init__.py  commands.py  main.py  parser.py
cybersec-toolkit/cybersec/core/: __init__.py  docker.py  filesystem.py  firewall.py  network.py  scanner.py  system.py
cybersec-toolkit/cybersec/utils/: __init__.py  config.py  exceptions.py  logger.py  reporting.py
cybersec-toolkit/docs/: QUICK_START.md
cybersec-toolkit/scripts/: install.sh
cybersec-toolkit/tests/unit/: test_scanner.py
cybersec/cli/: commands.py  main.py
cybersec/core/: docker.py  filesystem.py  firewall.py  network.py  scanner.py  system.py
cybersec/tests/: __init__.py  conftest.py
cybersec/tests/integration/: test_full_scan.py
cybersec/tests/unit/: test_cli.py  test_config.py  test_docker.py  test_filesystem.py  test_firewall.py  test_network.py  test_reporting.py  test_scanner.py  test_system.py
cybersec/utils/: config.py  reporting.py
