[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersec-toolkit"
description = "A comprehensive cybersecurity toolkit for system analysis, network security, firewall management, and threat detection"
version = "3.0.0"
authors = [
    {name = "Cybersecurity Toolkit Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "docker>=6.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "bandit>=1.7.5",
    "mypy>=1.5.0",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cybersec*", "cybersecurity*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["cybersec", "cybersecurity"]
known_third_party = ["docker", "pyyaml", "requests", "colorama", "click", "jinja2", "pytest"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv"
]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py files
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[tool.bandit]
targets = ["."]
exclude_dirs = [".git", "__pycache__", "dist", "build", ".venv"]
skips = ["B101"]  # Skip "Using the global statement" as some use cases are valid

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=cybersec",
    "--cov-report=html",
    "--cov-report=term-missing"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]